테스트용 DB(H2)와 설정 분리

--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
-            <scope>runtime</scope>
+            <scope>test</scope><!--테스트시에만 H2사용-->
         </dependency>
         <dependency>
             <groupId>org.postgresql</groupId>
