--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,15 @@
-#JSON->객체로 역직렬화 할 때 없는 properties가 존재하는 경우  실패하도록
+#JSON-> \uC5ED\uC9C1\uB82C\uD654\uC2DC unknow properites\uAC00 \uC788\uB294 \uACBD\uC6B0 fail\uB418\uB3C4\uB85D \uD568.
 spring.jackson.deserialization.fail-on-unknown-properties=true
+
+spring.datasource.username=restapi
+spring.datasource.password=restapi
+spring.datasource.url=jdbc:postgresql://193.122.121.208:5432/restapi
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.properties.hibernate.format_sql=true
+
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
