이벤트 목록 API 추가

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
-#JSON-> \uC5ED\uC9C1\uB82C\uD654\uC2DC unknow properites\uAC00 \uC788\uB294 \uACBD\uC6B0 fail\uB418\uB3C4\uB85D \uD568.
+#\uD14C\uC2A4\uD2B8\uC6A9 Application \uC124\uC815\uC740 test/java/resources/application-test.properties \uC5D0\uC11C \uC124\uC815\uB418\uC5B4 \uC788\uB2E4.
+
+#JSON-> \uC5ED\uC9C1\uB82C\uD654\uC2DC unknown properites\uAC00 \uC788\uB294 \uACBD\uC6B0 fail\uB418\uB3C4\uB85D \uD568.
 spring.jackson.deserialization.fail-on-unknown-properties=true
 
 spring.datasource.username=restapi
