--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,3 +1,5 @@
+#\uD14C\uC2A4\uD2B8\uC6A9 Application \uC124\uC815(test\uC5D0\uC11C\uB294 H2 DB \uC0AC\uC6A9)
+#\uC5EC\uAE30\uC5D0 \uC5C6\uB294 property\uB294 main/resources/application.properties\uC758 \uC124\uC815\uC744 \uB530\uB978\uB2E4.
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.url=jdbc:h2:mem:testdb
